<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_HMIEButton_HMI" Id="{dd614e4e-0bdc-0845-350f-74ce1aed1e8e}">
    <Declaration><![CDATA[TYPE ST_HMIEButton_HMI :
STRUCT
	bActive		: BOOL;
	bVisible	: BOOL;
	bEnable		: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>